add template base and index

--- a/garzonfilms/home/templates/index.html
+++ b/garzonfilms/home/templates/index.html
@@ -1,80 +1,9 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Garzon Films</title>
-    <link rel="stylesheet" href="css/min/foundation.min.css" />
-    <link rel="stylesheet" href="css/min/font-icomoon.min.css">
-    <link rel="stylesheet" href="css/min/garzonfilms.min.css">
-    <script src="js/vendor/modernizr.js"></script>
-
-    <!-- SEO and Facebook Atributos-->
-    <meta name="description" content="Garzon Films is an independent production company founded by Andy Garzón" />
-    <meta name="keywords" content="GarzonFilms, cine, movies, photography, films, Puebla, Mexico" />
-    <meta name="author" content="Andy Garzon" />  
-    
-    <meta property="fb:app_id" content="504922086287468" />
-    <meta property="og:type" content="website" /> 
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="Garzon Films is an independent production company founded by Andy Garzón" />
-    <meta property="og:image" content="http://garzonfilms.com/img/home/home_01.jpg" />
-    <!-- Fin de SEO y Facebook atributos-->
-    <!-- Favicons y Directivas para AppChrome -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <!-- fAVICONS-->
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/icons/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/icons/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/icons/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/icons/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/icons/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/icons/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/icons/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="/img/icons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/img/icons/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/img/icons/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/img/icons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/img/icons/manifest.json">
-    <link rel="shortcut icon" href="/img/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="Garzon Films">
-    <meta name="application-name" content="Garzon Films">
-    <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="msapplication-TileImage" content="/img/icons/mstile-144x144.png">
-    <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-  </head>
-  <body>
-    
-  <nav class="menu-padding">
-      <div class="row text-center">
-          <div class="medium-3 columns"><a href="/"><img id="logo" width="120px" src="img/logo/logo_garzonfilms_200x128.png" alt="GarzonFilms Sitio Oficial"></a></div>
-          <div class="medium-6 columns">
-              <div class="row">
-                  <div class="medium-2 columns cl-effect-12 menu-padding"><a href="work.html">WORK</a></div>
-                  <div class="medium-3 columns cl-effect-12 menu-padding"><a href="contacto.html">CONTACT</a></div>
-                  <div class="medium-3 columns end cl-effect-12 menu-padding"><a href="about.html">ABOUT</a></div>
-              </div>
-          </div>
-          <div class="medium-3 columns">
-              <div class="row">
-                  <div class="small-12 columns menu-padding">
-                      <a href="https://www.facebook.com/garzonfilms" title="Facebook GarzonFilms" target="_blank"><span class="icon-facebook medium"></span></a>
-                      <a href="http://twitter.com/AndyGarzonA" title="Twitter GarzonFilms" target="_blank"><span class="icon-twitter medium"></span></a>
-                      <a href="http://youtube.com/AndyGVlogs" title=" Canal Youtube de GarzonFilms" target="_blank"><span class="icon-youtube medium"></span></a>
-                      <a href="http://instagram.com/andygarzon" title="Instragram GarzonFilms" target="_blank"><span class="icon-instagram medium"></span></a>
-                      <a href="https://vimeo.com/garzonfilms" title="Vimeo GarzonFilms" target="_blank"><span class="icon-vimeo medium"></span></a>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </nav>
-  
+{% extends "base.html" %}
+{% block content %}
   <section class="padding-top">
     <section class="row padding-top">
       <div class="small-12 medium-11 medium-centered columns">
-        
+
         <img id="home" width="100%" class="animated pulse shadow" src="" alt="">
         <noscript>
           <img id="home" class="animated pulse shadow" src="/img/home/home_01" alt="Fotografia por Andy Garzon, Puebla. MX">
@@ -83,57 +12,9 @@
       </div>
     </section>
   </section>
-<footer class="padding-top">
-   <div class="row">
-     <div class="small-12 columns text-right">
-       <p class="small-only-text-center">Copyright © 2015 <a href="/">GarzonFilms</a>  Created by <a href="http://mx.linkedin.com/in/xtornasol512/" target="_blank">Cxuko</a></p>
-     </div>
-   </div>
-  </footer>
-
-
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/home.min.js"></script>
-    <script src="js/codiguito.min.js"></script>
-    <script>
+{% endblock content %}
+{% block js %}
+  <script>
       randomImg();
     </script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-50317801-1', 'auto');
-      ga('require', 'displayfeatures');
-      ga('require', 'linkid', 'linkid.js');
-      ga('send', 'pageview');
-
-    </script>
-     <!-- Quantcast Tag -->
-    <script type="text/javascript">
-        var _qevents = _qevents || [];
-
-        (function() {
-        var elem = document.createElement('script');
-        elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
-        elem.async = true;
-        elem.type = "text/javascript";
-        var scpt = document.getElementsByTagName('script')[0];
-        scpt.parentNode.insertBefore(elem, scpt);
-        })();
-
-        _qevents.push({
-        qacct:"p-wvzeHdCndPh7t"
-        });
-    </script>
-    <noscript>
-        <div style="display:none;">
-        <img src="//pixel.quantserve.com/pixel/p-wvzeHdCndPh7t.gif" border="0" height="1" width="1" alt="Quantcast"/>
-        </div>
-    </noscript>
-    <!-- End Quantcast tag -->
-  </body>
-</html>
+{% endblock js %}
