some modifications to js

--- a/garzonfilms/home/templates/index.html
+++ b/garzonfilms/home/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block content %}
   <section class="padding-top">
     <section class="row padding-top">
@@ -14,6 +15,7 @@
   </section>
 {% endblock content %}
 {% block js %}
+  <script src="{% static "js/site/home.js" %}"></script>
   <script>
       randomImg();
     </script>
