name correctly jsblock

--- a/garzonfilms/home/templates/index.html
+++ b/garzonfilms/home/templates/index.html
@@ -14,9 +14,9 @@
     </section>
   </section>
 {% endblock content %}
-{% block js %}
+{% block jsblock %}
   <script src="{% static "js/site/home.js" %}"></script>
   <script>
       randomImg();
     </script>
-{% endblock js %}
+{% endblock jsblock %}
