add templates and views changes to work with template extends

--- a/garzonfilms/home/templates/index.html
+++ b/garzonfilms/home/templates/index.html
@@ -7,7 +7,7 @@
 
         <img id="home" width="100%" class="animated pulse shadow" src="" alt="">
         <noscript>
-          <img id="home" class="animated pulse shadow" src="/img/home/home_01" alt="Fotografia por Andy Garzon, Puebla. MX">
+          <img id="home" class="animated pulse shadow" src="" alt="Fotografia por Andy Garzon, Puebla. MX">
         </noscript>
         <p><span id="caption">Garzon Films</span> by Andy Garzón</p>
       </div>
