--- a/garzonfilms/home/templates/base.html
+++ b/garzonfilms/home/templates/base.html
@@ -53,9 +53,9 @@
           <div class="medium-3 columns"><a href="/"><img id="logo" width="120px" src="/static/img/logo/logo_garzonfilms_200x128.png" alt="GarzonFilms Sitio Oficial"></a></div>
           <div class="medium-6 columns">
               <div class="row">
-                  <div class="medium-2 columns cl-effect-12 menu-padding"><a href="work.html">WORK</a></div>
-                  <div class="medium-3 columns cl-effect-12 menu-padding"><a href="contacto.html">CONTACT</a></div>
-                  <div class="medium-3 columns end cl-effect-12 menu-padding"><a href="about.html">ABOUT</a></div>
+                  <div class="medium-2 columns cl-effect-12 menu-padding"><a href="/work">WORK</a></div>
+                  <div class="medium-3 columns cl-effect-12 menu-padding"><a href="/contact">CONTACT</a></div>
+                  <div class="medium-3 columns end cl-effect-12 menu-padding"><a href="/about">ABOUT</a></div>
               </div>
           </div>
           <div class="medium-3 columns">
@@ -87,10 +87,9 @@
 
     <script src="{% static "js/vendor/jquery.js" %}"></script>
     <script src="{% static "js/foundation.min.js" %}"></script>
-    <script src="{% static "js/site/codiguito.js" %}"></script>
-
     {% block jsblock %}
     {% endblock jsblock %}
+    <script src="{% static "js/site/codiguito.js" %}"></script>
     {% include "blocks/script_block_home.html" %}
   </body>
 </html>
