Add urls for pages

--- a/garzonfilms/home/templates/work.html
+++ b/garzonfilms/home/templates/work.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block title %}
-  Work Title
+  Work
 {% endblock title %}
 {% block content %}
   <section class="padding-top">
