fix jQuery fancy box

--- a/garzonfilms/home/templates/work.html
+++ b/garzonfilms/home/templates/work.html
@@ -58,7 +58,7 @@
 {% endblock content %}
 
 {% block jsblock %}
-  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="{% static "js/jquery.fancybox.min.js" %}"></script>
 {% endblock jsblock %}
 
 
