add fancy box css

--- a/garzonfilms/home/templates/base.html
+++ b/garzonfilms/home/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static "css/min/foundation.min.css" %}" />
     <link rel="stylesheet" href="{% static "css/min/font-icomoon.min.css" %}">
     <link rel="stylesheet" href="{% static "css/min/garzonfilms.min.css" %}">
+    {% block cssblock %}{% endblock cssblock %}
     <script src="{% static "js/vendor/modernizr.js" %}"></script>
 
     <!-- SEO and Facebook Atributos-->
