--- a/garzonfilms/home/templates/work.html
+++ b/garzonfilms/home/templates/work.html
@@ -3,6 +3,9 @@
 {% block title %}
   Work
 {% endblock title %}
+{% block cssblock %}
+  <link rel="stylesheet" href="{% static "css/min/jquery.fancybox.min.css" %}" />
+{% endblock cssblock %}
 {% block content %}
   <section class="padding-top">
     <section class="row padding-top">
