update to accept new whitenoise config

--- a/garzonfilms/home/templates/index.html
+++ b/garzonfilms/home/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
   <section class="padding-top">
     <section class="row padding-top">
