--- a/garzonfilms/home/templates/base.html
+++ b/garzonfilms/home/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-{% load staticfiles %}
+{% load static %}
 <html class="no-js" lang="en">
   <head>
     {% include "blocks/tag_manager_header.html" %}
